--- a/VRChat/54/1126754.html
+++ b/VRChat/54/1126754.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "Y98rm8ZkGxj7RxrAqbQrw+1eIeHWOr//hjUl2mMG1d0="></script>
+    "dvNbyN0zwIhEJ2lKCHks+ZXHR2fRTs4MqtyD6xcfkZ0="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ゴリアテちゃんお座りキーホルダー","description":"VRchatやバーチャルキャストで活躍中のGoliath dollさん（http://3d.nicovideo.jp/works/td33709）を描いたアクリルキーホルダーが初登場！\npixivFACTORY製です。\n\n","url":"https://booth.pm/ja/items/1126754","offers":{"priceCurrency":"JPY","@type":"Offer","price":"1090"},"image":"https://booth.pximg.net/c/620x620/328d82fd-53bb-4d2d-b005-317d4c5b943a/i/1126754/585c54fd-102a-4c2e-b43a-f91a3bcd0283_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="Y98rm8ZkGxj7RxrAqbQrw+1eIeHWOr//hjUl2mMG1d0="></script>
+    nonce="dvNbyN0zwIhEJ2lKCHks+ZXHR2fRTs4MqtyD6xcfkZ0="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -420,9 +420,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
