--- a/VRChat/69/1126369.html
+++ b/VRChat/69/1126369.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "8NRHof/TljKSe2WOLJ0tyP9oOeN+6px4vzbTGYX5KSw="></script>
+    "FqsrtPhTZ/pqVkkTdZxC6w7pyRnx3+U/qOBXwJiMoCs="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【サポート終了】ガムラン【3Dモデル/オリジナルキャラクター】","description":"★☆★＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝\n\n本データの更新およびサポートは終了しました。\n本データの不具合修正やデータ追加などは、今後は行われません。\nご購入の際は上記事項をご了承の上でお願いします。\n\n長らくのご愛顧、誠にありがとうございました。\n\n★☆★＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝\n\nVRChat用の設定が同梱してありますが、「Avatar2.0のみ」となります。\nまた、同梱UnityPackageは「2018バージョンのみ」となります。\n\n★☆★＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝\n\n\n\n\nご利用の前に必ず【ショップご利用の前に】【利用規約】【仕様書】をお読みください。\n本ショップの商品を購入した時点で、その内容に同意したと見なします。","url":"https://booth.pm/ja/items/1126369","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"1300","highPrice":"1300"},"image":"https://booth.pximg.net/c/620x620/66e44db3-1e70-427e-ba0c-5d35f8af2b12/i/1126369/e4569f72-6cad-4fa8-9729-334fd3a4d76a_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="8NRHof/TljKSe2WOLJ0tyP9oOeN+6px4vzbTGYX5KSw="></script>
+    nonce="FqsrtPhTZ/pqVkkTdZxC6w7pyRnx3+U/qOBXwJiMoCs="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -656,9 +656,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
