--- a/VRChat/98/1124998.html
+++ b/VRChat/98/1124998.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "QxeBJI4Od3CUiFz0lv39psKQL9Cgmw/3zdYa9eIf1h4="></script>
+    "IJ3/4CSHeV9XA+4BKr/QozrbmkYeaanKjRvgHk7OP6c="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"3Dモデル ペストマスク","description":"ペスト医師のマスクです。\n感染症やミーム汚染から身を守りたいあなたに。\n白・黒2種類のテクスチャを用意しております。\n\n△2861\n\nファイル内容物\nModels\n→Plaguemask.fbx\nTexture\n→上記2種類のテクスチャ\nplaguemask.unitypackage\n\n\n再配布、公序良俗に反する利用を禁止します。\n\n製作者twitter:@lon6021","url":"https://booth.pm/ja/items/1124998","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/2a6fd184-8ec5-423a-adfd-b07ddb313ab1/i/1124998/ded2ae0f-1d63-4782-b604-4d8f94db433f_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="QxeBJI4Od3CUiFz0lv39psKQL9Cgmw/3zdYa9eIf1h4="></script>
+    nonce="IJ3/4CSHeV9XA+4BKr/QozrbmkYeaanKjRvgHk7OP6c="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -391,9 +391,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
