--- a/VRChat/60/1124360.html
+++ b/VRChat/60/1124360.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "5HzHPY1f2/70u1/MnPgCEc0fjN19hkUjCvxyxT+tKVA="></script>
+    "uM/9OcbUKQhOWaSNJP4Xuf0uAEibcUYeTFkDshScB6k="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRchat向け小物　呪文付き魔法の杖","description":"2021年12月25日更新\n・呪文がマテリアルエラー（マゼンタ色）になっていた事の修正\n・利用規約を更新\n\nダウンロード商品なので返金処理ができません。\nその事をご了承の上購入してください。\n\n■呪文が出てくる魔法の杖です。\n呪文無し版の普通の3Dモデルも同梱しております。\n\n■使い方\n青い四角いアイコンのファイルをヒエラルキーにドラッグアンドドロップするだけで動きます。\n\n■呪文の長さは調整する事も可能です。\nその場合は同梱の説明画像を参考に調整してください。\n\n■免責事項\nこのデータの使用によって発生したいかなる損害・損失・トラブルについて、作者は一切の責任を負いません\n\n■禁則事項\n政治的利用\n公序良俗に反する行為\n他者を侮辱するような利用\n他人を不快にさせる行為\n再配布（改造・未改造問わず）\n※アバターペデスタルへの使用も再配布にあたります\n・本商品に含まれるデータを元にした商品を作る事\nその他製作者が不適切と判断したもの\n※上記の規約は予告なく変更する場合があります\n■やっていい事\n改変\n本製品をワールドやアバターに使用すること\n本製品を使用したワールドをパブリック化する事\n※パブリック化する際は必ず一報下さい\n\n※上記以外の使用については作者にお問い合わせください。\n\n■やっていい事\n改変","url":"https://booth.pm/ja/items/1124360","offers":{"priceCurrency":"JPY","@type":"Offer","price":"300"},"image":"https://booth.pximg.net/c/620x620/9585a184-fff0-488e-8a9d-612c758951c2/i/1124360/aa4d98b1-81cf-4a4c-b9a6-7a1d6444ff50_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="5HzHPY1f2/70u1/MnPgCEc0fjN19hkUjCvxyxT+tKVA="></script>
+    nonce="uM/9OcbUKQhOWaSNJP4Xuf0uAEibcUYeTFkDshScB6k="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -435,9 +435,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
