--- a/VRChat/34/1123734.html
+++ b/VRChat/34/1123734.html
@@ -106,7 +106,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "7MP+Mjd5WOXifqZ0YRVa+690U75D2At/cF2h8LEwuqQ="></script>
+    "j7mKfF1Y73Xmd8Ft5gmS5W0zwLN2Gx+DSG3xHj2HZ28="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【3D】ピコピコハンマー【小物】","description":"動画で使用したピコピコハンマーの3Dモデルです。\n\n◆利用規約\n☑ 商用利用→　可\n☑ 加工・二次配布→　可\n☑ 使用報告・権利表記→　不要\n☑ 内容物の著作権そのものは放棄しておりません\n\n◆ 内容物\n- モデル（ .fbx, .obj ）\n- テクスチャ（ .png ）\n\n\n◆ 製作者：タキビ\nhttps://twitter.com/vtuber_takibi","url":"https://booth.pm/ja/items/1123734","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/27e346b2-c873-492b-a801-301f0dbda05c/i/1123734/3cbe95fa-aa68-4f14-abdb-502b8e08a92c_base_resized.jpg"}
     </script>
@@ -117,7 +117,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="7MP+Mjd5WOXifqZ0YRVa+690U75D2At/cF2h8LEwuqQ="></script>
+    nonce="j7mKfF1Y73Xmd8Ft5gmS5W0zwLN2Gx+DSG3xHj2HZ28="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -392,9 +392,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
