--- a/VRChat/01/1122601.html
+++ b/VRChat/01/1122601.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "gKHFDJndXLNTG0amfi2NgCP6o2pbEEWCzvMjAhOcpOU="></script>
+    "j3vpT+9razYhaXXKIuDYgqrwXovczfsE0ksfo02EWUc="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"MCF レールガンV3","description":"【製品内容】\n・UnityPackage\n・利用規約\n\n【説明】\n昔作ったレールガンのリメイク･･･のはずだったんだが別物になっちゃった。\n各パーツ毎に組み合わせて君好みにしてみよう。全部乗せしてもいつも通りのローポリ！\n\n\nSSは #MCF_VRC をつけてツイートしてくれると私が喜びます。\n\n全部乗せ:1558\n\nフレーム:542\nバレル:40\n\nストック:84\nシンプルストック:52\n軽量化ストック:128\n\nスコープ:168\nホロサイト:82\n\nマガジン:52\nドラムマガジン:278\nボックスマガジン:132\n\n\n【免責事項】\n当モデルを使用した際、使用者側にいかなる不利益が発生した場合でも当方は一切責任を負いません。\n\n【禁止事項】\n・再配布（ゲームに組み込む・VRCのペデスタル等は許可）\n・政治的、差別的な用途への利用、又は過去にそのような用途に扱われた経歴のあるキャラクターへの利用","url":"https://booth.pm/ja/items/1122601","offers":{"priceCurrency":"JPY","@type":"Offer","price":"1000"},"image":"https://booth.pximg.net/c/620x620/41721053-8f32-4b87-9b48-5fda7552cf1a/i/1122601/92c38bb2-0226-40c8-af73-f1653895dee8_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="gKHFDJndXLNTG0amfi2NgCP6o2pbEEWCzvMjAhOcpOU="></script>
+    nonce="j3vpT+9razYhaXXKIuDYgqrwXovczfsE0ksfo02EWUc="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -457,9 +457,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
