--- a/VRChat/06/1116606.html
+++ b/VRChat/06/1116606.html
@@ -78,7 +78,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "QUQPY/swBwPphQnszklBdHokSR9JmkifiuuxyxCk9vc="></script>
+    "HeazWCit0UHEy+k+OUP5cjM0Gsl528klwKhyvhXEPDI="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRC/VRM/MMD向け3Dモデル「アンドレア」ver2.0","description":"鮫のお姉さんです！\n","url":"https://booth.pm/ja/items/1116606","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"900","highPrice":"1500"},"image":"https://booth.pximg.net/c/620x620/a396d0e8-451f-49ff-9a9d-89660f8ae6cd/i/1116606/9e24ba15-3cf2-47df-92b9-78dc7c0ffe8f_base_resized.jpg"}
     </script>
@@ -92,7 +92,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="QUQPY/swBwPphQnszklBdHokSR9JmkifiuuxyxCk9vc="></script>
+    nonce="HeazWCit0UHEy+k+OUP5cjM0Gsl528klwKhyvhXEPDI="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -531,9 +531,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
